@@ -1,6 +1,5 @@
 package io.github.chains_project.tracediff;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Constants {
@@ -30,5 +29,5 @@ public class Constants {
     public static final String UNKNOWN_TEST = "unknown::unknown";
     public static final int REPEATS_FOR_RANDOM_EXCLUSION = 3;
     public static final List<String> FILE_RELATED_CLASSES =
-            Arrays.asList("java.io.File", "java.nio.file.Path", "sun.nio.fs.UnixPath", "sun.nio.fs.WindowsPath");
+            List.of("java.io.File", "java.nio.file.Path", "sun.nio.fs.UnixPath", "sun.nio.fs.WindowsPath");
 }
